ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 24-JAN-2011
description here
====================================================================================


******************************************
CHANGELOG: 09-09-2012 MPB
Fix bug added in Cswitch editing

******************************************
CHANGELOG: 08-09-2012 MPB
Add Custom telemetry editing on frsky tab

******************************************
CHANGELOG: 08-09-2012 MPB
On screen editing of custom switches and safety/voice switches updated
These do NOT print
Add Custom Telemetry display items to EEPROM definition
Simulate custom and safety/voice switches as per updates

******************************************
CHANGELOG: 08-08-2012 MPB
Add backlightinvert, volume, PPMSIM and InternalFrskyAlarms
  to general edit

******************************************
CHANGELOG: 23-07-2012 MPB
Add Custom switches TIMER option

******************************************
CHANGELOG: 2-FEB-2012 ER
Moved menus around and change the nomeclature to make it more newcomer friendly
Changed MAX to HALF to follow er9x nomeclature

******************************************
CHANGELOG: 9-FEB-2012 ER
Added default avrdude location for MAC
Changed fuse set warning to be more user friendly
Restored the ability to set fuses back to factory default.

******************************************
CHANGELOG: 7-FEB-2012 ER
Fixed load model and general settings files error
Allow revision numbers to be 4 digit

******************************************
CHANGELOG: 30-JAN-2012 ER
Minor tweaks and fixes

******************************************
CHANGELOG: 27-JAN-2012 ER
Notes functional

******************************************
CHANGELOG: 27-JAN-2012 ER
XML structured data saving in EEPE/EEPM/EEPG files
Added file info