@@ -11,7 +11,10 @@ MixerDialog::MixerDialog(QWidget *parent, MixData *mixdata, int stickMode, QStri
     md = mixdata;
 
     this->setWindowTitle(tr("DEST -> CH%1%2").arg(md->destCh/10).arg(md->destCh%10));
-    populateSourceCB(ui->sourceCB, stickMode, md->srcRaw);
+    populateSourceCB(ui->sourceCB, stickMode, 0, md->srcRaw);
+    ui->sourceCB->addItem("3POS");
+    ui->sourceCB->setCurrentIndex(md->srcRaw);
+
     ui->sourceCB->removeItem(0);
     ui->weightSB->setValue(md->weight);
     ui->offsetSB->setValue(md->sOffset);
